kubemanifest/01-API-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-1-deployment
  labels:
    app: api-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-1 
  template: 
    metadata:
      labels:
        app: api-1
    spec:
      containers: 
        - name: api-1 
          image: yogeshrajmane83/springboot-api-eks-hello:1.0.0
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service 
metadata:
  name: api-1-nodeport-service
  labels:
    app: api-1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api1/hello
spec:
  type: NodePort
  selector:
    app: api-1
  ports:
    - port: 8080
      targetPort: 8080
