kubemanifest/02-API-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-2-deployment
  labels:
    app: api-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-2
  template: 
    metadata:
      labels:
        app: api-2
    spec:
      containers: 
        - name: api-2
          image: yogeshrajmane83/springboot-api-eks-hello:2.0.0
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service 
metadata:
  name: api-2-nodeport-service
  labels:
    app: api-2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api2/hello
spec:
  type: NodePort
  selector:
    app: api-2
  ports:
    - port: 8080
      targetPort: 8080
