kubemanifest/03-API-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-3-deployment
  labels:
    app: api-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-3 
  template: 
    metadata:
      labels:
        app: api-3
    spec:
      containers: 
        - name: api-3
          image: yogeshrajmane83/springboot-api-eks-hello:3.0.0
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service 
metadata:
  name: api-3-nodeport-service
  labels:
    app: api-3
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api3/hello
spec:
  type: NodePort
  selector:
    app: api-3
  ports:
    - port: 8080
      targetPort: 8080
